# file-emblems

./: CMakeLists.txt  README.md
cmake/: options.cmake  platform.cmake
cmake/libs/: FE_FindQt6andKF6.cmake  FindGIO-UNIX.cmake  FindGIO.cmake
cmake/platform/: gcc.cmake
src/: CMakeLists.txt  config.version.h.in  uvector.h
src/kde/: CMakeLists.txt  FeQUrl.cpp  FeQUrl.hpp  OverlayIconPlugin.cpp
src/kde/kf6/: CMakeLists.txt  OverlayIconPlugin.json  OverlayIconPluginKF6.hpp  config.kf6.h.in
src/libfexattr/: CMakeLists.txt  GVfsReader.cpp  GVfsReader.hpp  IEmblemReader.hpp  XAttrReader.cpp  XAttrReader.hpp  config.libfexattr.h.in
